Card: Fixed resource card pushing margins out on the right before image loads on mobile

--- a/source/sass/components/@health/_health-card.scss
+++ b/source/sass/components/@health/_health-card.scss
@@ -190,7 +190,6 @@
     @include AU-media(sm) {
       @include AU-space(padding, 2unit 0 0 0);
     }
-    display: inline-block;
   }
 
   // Solid
